--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -39,7 +39,7 @@
         \input{chapters/Birational_geometry/bend_and_break/text.tex}
         \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
         \input{chapters/Birational_geometry/Cone_theorem/text.tex}
-        \input{chapters/Birational_geometry/Basepoint_free_on_char_p/text.tex}
+        % \input{chapters/Birational_geometry/Basepoint_free_on_char_p/text.tex}
         \input{chapters/Birational_geometry/F-singularties/text.tex}
 
     \appendix
