separate general note from note_ag

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -251,6 +251,60 @@
 \newcommand{\calZ}{{\mathcal{Z}}}
 \newcommand{\calz}{{\mathcal{z}}}
 
+
+\newcommand{\scrA}{{\mathscr{A}}}
+\newcommand{\scra}{{\mathscr{a}}}
+\newcommand{\scrB}{{\mathscr{B}}}
+\newcommand{\scrb}{{\mathscr{b}}}
+\newcommand{\scrC}{{\mathscr{C}}}
+\newcommand{\scrc}{{\mathscr{c}}}
+\newcommand{\scrD}{{\mathscr{D}}}
+\newcommand{\scrd}{{\mathscr{d}}}
+\newcommand{\scrE}{{\mathscr{E}}}
+\newcommand{\scre}{{\mathscr{e}}}
+\newcommand{\scrF}{{\mathscr{F}}}
+\newcommand{\scrf}{{\mathscr{f}}}
+\newcommand{\scrG}{{\mathscr{G}}}
+\newcommand{\scrg}{{\mathscr{g}}}
+\newcommand{\scrH}{{\mathscr{H}}}
+\newcommand{\scrh}{{\mathscr{h}}}
+\newcommand{\scrI}{{\mathscr{I}}}
+\newcommand{\scri}{{\mathscr{i}}}
+\newcommand{\scrJ}{{\mathscr{J}}}
+\newcommand{\scrj}{{\mathscr{j}}}
+\newcommand{\scrK}{{\mathscr{K}}}
+\newcommand{\scrk}{{\mathscr{k}}}
+\newcommand{\scrL}{{\mathscr{L}}}
+\newcommand{\scrl}{{\mathscr{l}}}
+\newcommand{\scrM}{{\mathscr{M}}}
+\newcommand{\scrm}{{\mathscr{m}}}
+\newcommand{\scrN}{{\mathscr{N}}}
+\newcommand{\scrn}{{\mathscr{n}}}
+\newcommand{\scrO}{{\mathscr{O}}}
+\newcommand{\scro}{{\mathscr{o}}}
+\newcommand{\scrP}{{\mathscr{P}}}
+\newcommand{\scrp}{{\mathscr{p}}}
+\newcommand{\scrQ}{{\mathscr{Q}}}
+\newcommand{\scrq}{{\mathscr{q}}}
+\newcommand{\scrR}{{\mathscr{R}}}
+\newcommand{\scrr}{{\mathscr{r}}}
+\newcommand{\scrS}{{\mathscr{S}}}
+\newcommand{\scrs}{{\mathscr{s}}}
+\newcommand{\scrT}{{\mathscr{T}}}
+\newcommand{\scrt}{{\mathscr{t}}}
+\newcommand{\scrU}{{\mathscr{U}}}
+\newcommand{\scru}{{\mathscr{u}}}
+\newcommand{\scrV}{{\mathscr{V}}}
+\newcommand{\scrv}{{\mathscr{v}}}
+\newcommand{\scrW}{{\mathscr{W}}}
+\newcommand{\scrw}{{\mathscr{w}}}
+\newcommand{\scrX}{{\mathscr{X}}}
+\newcommand{\scrx}{{\mathscr{x}}}
+\newcommand{\scrY}{{\mathscr{Y}}}
+\newcommand{\scry}{{\mathscr{y}}}
+\newcommand{\scrZ}{{\mathscr{Z}}}
+\newcommand{\scrz}{{\mathscr{z}}}
+
 \newcommand{\frakA}{{\mathfrak{A}}}
 \newcommand{\fraka}{{\mathfrak{a}}}
 \newcommand{\frakB}{{\mathfrak{B}}}
@@ -355,6 +409,7 @@
 \newcommand{\rmY}{{\mathrm{Y}}}
 \newcommand{\rmy}{{\mathrm{y}}}
 \newcommand{\rmZ}{{\mathrm{Z}}}
+\newcommand{\rmz}{{\mathrm{z}}}
 
 \newcommand{\bfA}{{\mathbf{A}}}
 \newcommand{\bfa}{{\mathbf{a}}}
