--- a/template/noteformyself.cls
+++ b/template/noteformyself.cls
@@ -96,7 +96,13 @@
 % Unicode数学字体支持 - 必须在mathtools之后加载
 \RequirePackage{unicode-math}  
 % 设置数学字体, needs to load the main font first
-\setmathfont{Cambria Math}  % like cal, support lowercase, seems only available in Windows
+% Cambria Math is only available on Windows.
+% If you are not on Windows, comment out the following line and use a cross-platform font like STIX Two Math or Libertinus Math.
+\IfFontExistsTF{Cambria Math}{
+  \setmathfont{Cambria Math}  % like cal, support lowercase, Windows only
+}{
+  \setmathfont{STIX Two Math} % fallback for non-Windows systems
+}
 \setmathfont{STIX Two Math}[range=cal] % like cal, support lowercase
 \setmathfont{Libertinus Math}[range=scr] % like scr, support lowercase
 % \setmathfont{XITS Math}[range=scr] % like scr, support lowercase
@@ -107,7 +113,7 @@
 
 
 % 引用系统
-\RequirePackage[backend=biber,style=alphabetic, backref=true]{biblatex} % 参考文献管理
+\RequirePackage[backend=biber,style=alphabetic,backref]{biblatex} % 参考文献管理
 \addbibresource{ref.bib}
 
 % 交互功能
@@ -631,6 +637,8 @@
 \declaretheorem[sibling=definition,name=Theorem]{theorem}
 \declaretheorem[sibling=definition,name=Lemma]{lemma}
 \declaretheorem[sibling=definition,name=Corollary]{corollary}
+\declaretheorem[sibling=definition,name=Conjecture]{conjecture}
+\declaretheorem[sibling=definition,name=Question]{question}
 \declaretheorem[sibling=definition,name=Remark]{remark}
 \declaretheorem[sibling=definition,name=Claim]{claim}
 \declaretheorem[sibling=definition,name=Example]{example}
@@ -663,6 +671,8 @@
 \crefname{theorem}{Theorem}{Theorems}
 \crefname{lemma}{Lemma}{Lemmas}
 \crefname{corollary}{Corollary}{Corollaries}
+\crefname{conjecture}{Conjecture}{Conjectures}
+\crefname{question}{Question}{Questions}
 \crefname{remark}{Remark}{Remarks}
 \crefname{example}{Example}{Examples}
 \crefname{exercise}{Exercise}{Exercises}
@@ -686,7 +696,6 @@
   after skip=10pt,     % 下方间距
   breakable            % 允许跨页断行
 }
- 
 % 命题环境配置（颜色方案：紫色系）
 \tcolorboxenvironment{proposition}{
   boxrule=0pt,
@@ -701,7 +710,6 @@
   after skip=10pt,
   breakable
 }
- 
 % 定理环境配置（颜色方案：红色系）
 \tcolorboxenvironment{theorem}{
   boxrule=0pt,
@@ -716,7 +724,6 @@
   after skip=10pt,
   breakable
 }
- 
 % 引理环境配置（颜色方案：品红系）
 \tcolorboxenvironment{lemma}{
   boxrule=0pt,
@@ -731,22 +738,48 @@
   after skip=10pt,
   breakable
 }
- 
 % 推论环境配置（颜色方案：橙色系）
 \tcolorboxenvironment{corollary}{
   boxrule=0pt,
   boxsep=0pt,
-  colback={Orange!10}, % 背景色改为橙色10%透明度
+  colback={orange!10}, % 背景色改为橙色10%透明度
   left=8pt,
   right=8pt,
   enhanced jigsaw,
-  borderline west={2pt}{0pt}{Orange}, % 左侧装饰线改为橙色
+  borderline west={2pt}{0pt}{orange}, % 左侧装饰线改为橙色
   sharp corners,
   before skip=10pt,
   after skip=10pt,
   breakable
 }
- 
+% 猜想环境配置（颜色方案：violet）
+\tcolorboxenvironment{conjecture}{
+  boxrule=0pt,
+  boxsep=0pt,
+  colback={violet!10},   % 背景颜色（violet10%透明度）
+  left=8pt,              % 左内边距
+  right=8pt,             % 右内边距
+  enhanced jigsaw,       % 启用高级边框绘制（解决某些兼容问题）
+  borderline west={2pt}{0pt}{violet}, % 左侧装饰线（2pt粗细，violet）
+  sharp corners,         % 直角边框（默认圆角）
+  before skip=10pt,      % 上方间距
+  after skip=10pt,       % 下方间距
+  breakable              % 允许跨页断行
+}
+% 问题环境配置（颜色方案：Thistle）
+\tcolorboxenvironment{question}{
+  boxrule=0pt,
+  boxsep=0pt,
+  colback={Thistle!10}, % 背景色改为Thistle10%透明度
+  left=8pt,
+  right=8pt,
+  enhanced jigsaw,
+  borderline west={2pt}{0pt}{Thistle}, % 左侧装饰线改为Thistle
+  sharp corners,
+  before skip=10pt,
+  after skip=10pt,
+  breakable
+}
 % 证明环境配置（特殊样式：无背景色，左侧线为青灰色）
 \tcolorboxenvironment{proof}{
   boxrule=0pt,
@@ -761,7 +794,6 @@
   breakable,
   before upper={\setlength{\parindent}{2em}},
 }
- 
 % 示例环境配置（特殊样式：无背景色，左侧线为绿色）
 \tcolorboxenvironment{example}{
   boxrule=0pt,
@@ -773,24 +805,14 @@
   before skip=10pt,
   after skip=10pt,
   breakable,
-  % colback={Green!10}, % 背景色改为橙色10%透明度
-  % left=8pt,
-  % right=8pt,
-  % enhanced jigsaw,
-  % borderline west={2pt}{0pt}{Green}, % 左侧装饰线改为绿色
-  % sharp corners,
-  % before skip=10pt,
-  % after skip=10pt,
-  % breakable,
   before upper={\setlength{\parindent}{2em}},
 }
- 
 % 注记环境配置（特殊样式：无背景色，左侧线为黑色）
 \tcolorboxenvironment{remark}{
   boxrule=0pt,
   boxsep=0pt,
   blanker,
-  borderline west={2pt}{0pt}{Black},  % 黑色左侧线
+  borderline west={2pt}{0pt}{black},  % 黑色左侧线
   left=8pt,
   right=8pt,
   sharp corners,
@@ -799,7 +821,6 @@
   breakable,
   before upper={\setlength{\parindent}{2em}},
 }
-
 % 断言环境配置（特殊样式：无背景色，左侧线为品红）
 \tcolorboxenvironment{claim}{
   boxrule=0pt,
@@ -814,7 +835,6 @@
   breakable,
   before upper={\setlength{\parindent}{2em}},
 }
-
 % 步骤环境配置（特殊样式：无背景色，左侧线为品红色）
 \tcolorboxenvironment{step}{
   boxrule=0pt,
@@ -829,20 +849,19 @@
   breakable,
   before upper={\setlength{\parindent}{2em}},
 }
- 
-% 练习环境配置（颜色方案：紫罗兰系）
+% 练习环境配置（特殊样式：无背景色，左侧线为teal）
 \tcolorboxenvironment{exercise}{
   boxrule=0pt,
   boxsep=0pt,
-  % colback={violet!10}, % 背景色改为紫罗兰10%透明度
+  blanker,
+  borderline west={2pt}{0pt}{teal},  % teal色左侧线
   left=8pt,
   right=8pt,
-  enhanced jigsaw,
-  borderline west={2pt}{0pt}{violet}, % 左侧装饰线改为紫罗兰色
   sharp corners,
   before skip=10pt,
   after skip=10pt,
-  breakable
+  breakable,
+  before upper={\setlength{\parindent}{2em}},
 }
 
 
