--- a/template/text.tex
+++ b/template/text.tex
@@ -22,6 +22,12 @@
     \begin{corollary}[this is a corollary]
         \lipsum[1-2] 
     \end{corollary}
+    \begin{question}[this is a question]
+        \lipsum[1-2]
+    \end{question}
+    \begin{conjecture}[this is a conjecture]
+        \lipsum[1-2]
+    \end{conjecture}
     \begin{exercise}[this is an exercise]
         \lipsum[1-2]
     \end{exercise}
