separate ca,ha,cat, wirte a framework for ruled surface

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -15,11 +15,11 @@
 \version{0.1.0}
 
 \setCJKfamilyfont{lxgwwenkai}{LXGW WenKai} % 定义霞鹜文楷，若未安装，请去掉相关代码编译或使用其他字体
-\coversentence{\CJKfamily{lxgwwenkai}阿巴阿巴阿巴阿巴阿巴阿巴！}
-\coverimage{placeholder.jpg} % 封面图片
-% \coverlinecolor{red}
+\coversentence{\CJKfamily{lxgwwenkai}「あんたバかァ？」}
+\coverimage{Asuka.png} % 封面图片
+\coverlinecolor{brown!80!yellow} % 封面横线颜色
 \covertitlefont{Allura} % 封面标题字体, 若未安装，可注释掉此行编译或使用其他字体
-% \covertextcolor{green}
+\covertextcolor{red!80!black} % 封面标题颜色
 
 
 \begin{document}
