--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -33,9 +33,9 @@
 
     \mainmatter
 
-    \chapter{The First Properties}
-        \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
-        % \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
+    % \chapter{The First Properties}
+    %     \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
+    %     % \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
 
     \chapter{Birational Geometry}
         \input{chapters/Birational_geometry/bend_and_break/text.tex}
@@ -44,20 +44,20 @@
         % \input{chapters/Birational_geometry/Basepoint_free_on_char_p/text.tex}
         \input{chapters/Birational_geometry/F-singularties/text.tex}
 
-    \appendix
+    % \appendix
 
-    \chapter{Commutative Algebra}
-        \input{chapters/Commutative_algebra/elementary_results/text.tex}
-        \input{chapters/Commutative_algebra/associated_primes/text.tex}
-        \input{chapters/Commutative_algebra/dimension/text.tex}
-        \input{chapters/Commutative_algebra/integrally_closed_and_normal/text.tex}
-        \input{chapters/Commutative_algebra/regularity_and_smoothness/text.tex}
-        \input{chapters/Commutative_algebra/completion/text.tex}
+    % \chapter{Commutative Algebra}
+    %     \input{chapters/Commutative_algebra/elementary_results/text.tex}
+    %     \input{chapters/Commutative_algebra/associated_primes/text.tex}
+    %     \input{chapters/Commutative_algebra/dimension/text.tex}
+    %     \input{chapters/Commutative_algebra/integrally_closed_and_normal/text.tex}
+    %     \input{chapters/Commutative_algebra/regularity_and_smoothness/text.tex}
+    %     \input{chapters/Commutative_algebra/completion/text.tex}
 
-    \chapter{Homological Algebra}
-        \input{chapters/Homological_algebra/Complexes_and_Homology/text.tex}
-        \input{chapters/Homological_algebra/Derived_Functors/text.tex}
-        \input{chapters/Homological_algebra/Applications_to_Commutative_Algebra/text.tex}
+    % \chapter{Homological Algebra}
+    %     \input{chapters/Homological_algebra/Complexes_and_Homology/text.tex}
+    %     \input{chapters/Homological_algebra/Derived_Functors/text.tex}
+    %     \input{chapters/Homological_algebra/Applications_to_Commutative_Algebra/text.tex}
 
 
     \printbibliography[heading=bibintoc, title={References}]
