--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -37,6 +37,13 @@
     %     \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
     %     % \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
 
+    \chapter{Schemes and Varieties}
+        \input{chapters/Schemes_and_varieties/definition_and_first_properties/text.tex}
+        \input{chapters/Schemes_and_varieties/Linear_system/text.tex}
+
+    \chapter{Surfaces}
+        \input{chapters/Surfaces/ruled_surface/text.tex}
+
     \chapter{Birational Geometry}
         \input{chapters/Birational_geometry/bend_and_break/text.tex}
         \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
