fit chapter abelian variety into new template

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -10,7 +10,7 @@
 \author{Tianle Yang}
 \date{\today}
 \authoremail{\href{mailto:loveandjustice@88.com}{loveandjustice@88.com}}
-\authorpage{\href{https://www.tianleyang.com}{tianleyang.com}}
+\authorpage{\href{https://www.tianleyang.com}{www.tianleyang.com}}
 \texsource{\href{https://github.com/MonkeyUnderMountain/Note_on_Algebraic_Geometry}{github.com/MonkeyUnderMountain/Note\_on\_Algebraic\_Geometry}}
 \version{0.1.0}
 
@@ -39,7 +39,8 @@
 
     \chapter{Schemes and Varieties}
         \input{chapters/Schemes_and_varieties/definition_and_first_properties/text.tex}
-        \input{chapters/Schemes_and_varieties/Linear_system/text.tex}
+        \input{chapters/Schemes_and_varieties/line_bundles_and_divisors/text.tex}
+        \input{chapters/Schemes_and_varieties/Line_bundles_induce_morphisms/text.tex}
 
     \chapter{Surfaces}
         \input{chapters/Surfaces/ruled_surface/text.tex}
