before changing def of variety to over algebraically closed field

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -39,11 +39,13 @@
 
     \chapter{Schemes and Varieties}
         \input{chapters/Schemes_and_varieties/definition_and_first_properties/text.tex}
+        \input{chapters/Schemes_and_varieties/Schemes_as_functors/text.tex}
         \input{chapters/Schemes_and_varieties/line_bundles_and_divisors/text.tex}
         \input{chapters/Schemes_and_varieties/Line_bundles_induce_morphisms/text.tex}
 
     \chapter{Surfaces}
         \input{chapters/Surfaces/ruled_surface/text.tex}
+        \input{chapters/Surfaces/some_singular_surfaces/text.tex}
 
     \chapter{Birational Geometry}
         \input{chapters/Birational_geometry/bend_and_break/text.tex}
