some process on surface

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -33,41 +33,35 @@
 
     \mainmatter
 
-    % \chapter{The First Properties}
-    %     \input{chapters/preliminary/setup_and_the_first_examples/text.tex} 
-    %     % \input{chapters/preliminary/normality_and_Cohen_Macaulay/text.tex}
-
     \chapter{Schemes and Varieties}
         \input{chapters/Schemes_and_varieties/definition_and_first_properties/text.tex}
-        \input{chapters/Schemes_and_varieties/Schemes_as_functors/text.tex}
         \input{chapters/Schemes_and_varieties/line_bundles_and_divisors/text.tex}
         \input{chapters/Schemes_and_varieties/Line_bundles_induce_morphisms/text.tex}
+
+    \chapter{More Scattered Topics}
 
     \chapter{Surfaces}
         \input{chapters/Surfaces/ruled_surface/text.tex}
         \input{chapters/Surfaces/some_singular_surfaces/text.tex}
 
+    \chapter{Moduli of vector bundles on curves}
+        \input{chapters/Moduli_of_vector_bundle_on_curves/Introduction_to_moduli_problems/text.tex}
+
     \chapter{Birational Geometry}
-        \input{chapters/Birational_geometry/bend_and_break/text.tex}
+        % \input{chapters/Birational_geometry/bend_and_break/text.tex}
         \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
         \input{chapters/Birational_geometry/Cone_theorem/text.tex}
-        % \input{chapters/Birational_geometry/Basepoint_free_on_char_p/text.tex}
         \input{chapters/Birational_geometry/F-singularties/text.tex}
 
+    \chapter{Abelian Varieties}
+        \input{chapters/Abelian_varieties/definition_and_examples/text.tex}
+        \input{chapters/Abelian_varieties/Picard_groups_of_abelian_varieties/text.tex}
+
+    \chapter{Algebraic Groups}
+        \input{chapters/Algebraic_groups/First_properties/text.tex}
+        \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
+
     % \appendix
-
-    % \chapter{Commutative Algebra}
-    %     \input{chapters/Commutative_algebra/elementary_results/text.tex}
-    %     \input{chapters/Commutative_algebra/associated_primes/text.tex}
-    %     \input{chapters/Commutative_algebra/dimension/text.tex}
-    %     \input{chapters/Commutative_algebra/integrally_closed_and_normal/text.tex}
-    %     \input{chapters/Commutative_algebra/regularity_and_smoothness/text.tex}
-    %     \input{chapters/Commutative_algebra/completion/text.tex}
-
-    % \chapter{Homological Algebra}
-    %     \input{chapters/Homological_algebra/Complexes_and_Homology/text.tex}
-    %     \input{chapters/Homological_algebra/Derived_Functors/text.tex}
-    %     \input{chapters/Homological_algebra/Applications_to_Commutative_Algebra/text.tex}
 
 
     \printbibliography[heading=bibintoc, title={References}]
