re compile the main files,

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -34,14 +34,21 @@
     \mainmatter
 
     \chapter{Schemes and Varieties}
+        \input{chapters/Schemes_and_varieties/Locally_ringed_space/text.tex}
         \input{chapters/Schemes_and_varieties/definition_and_first_properties/text.tex}
+        \input{chapters/Schemes_and_varieties/category_of_sheaves_of_modules/text.tex}
         \input{chapters/Schemes_and_varieties/line_bundles_and_divisors/text.tex}
         \input{chapters/Schemes_and_varieties/Line_bundles_induce_morphisms/text.tex}
 
     \chapter{More Scattered Topics}
 
     \chapter{Surfaces}
+        \input{chapters/Surfaces/The_first_properties/text.tex}
+        \input{chapters/Surfaces/MMP_on_surfaces/text.tex}
+        \input{chapters/Surfaces/Coarse_classification_of_surfaces/text.tex}
         \input{chapters/Surfaces/ruled_surface/text.tex}
+        \input{chapters/Surfaces/K3_surfaces/text.tex}
+        \input{chapters/Surfaces/Elliptic_surfaces/text.tex}
         \input{chapters/Surfaces/some_singular_surfaces/text.tex}
 
     \chapter{Moduli of vector bundles on curves}
