after class of moduli of coherent sheaves

--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -34,11 +34,13 @@
     \mainmatter
 
     \chapter{Schemes and Varieties}
+        \setcounter{section}{-1}
         \input{chapters/Schemes_and_varieties/Locally_ringed_space/text.tex}
         \input{chapters/Schemes_and_varieties/definition_and_first_properties/text.tex}
         \input{chapters/Schemes_and_varieties/category_of_sheaves_of_modules/text.tex}
         \input{chapters/Schemes_and_varieties/line_bundles_and_divisors/text.tex}
         \input{chapters/Schemes_and_varieties/Line_bundles_induce_morphisms/text.tex}
+        \input{chapters/Schemes_and_varieties/flat_smooth_and_etale_morphisms/text.tex}
 
     \chapter{More Scattered Topics}
 
@@ -56,9 +58,10 @@
 
     \chapter{Birational Geometry}
         % \input{chapters/Birational_geometry/bend_and_break/text.tex}
+        \input{chapters/Birational_geometry/Technical_preparation/text.tex}
         \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
         \input{chapters/Birational_geometry/Cone_theorem/text.tex}
-        \input{chapters/Birational_geometry/F-singularties/text.tex}
+        % \input{chapters/Birational_geometry/F-singularties/text.tex}
 
     \chapter{Abelian Varieties}
         \input{chapters/Abelian_varieties/definition_and_examples/text.tex}
@@ -67,6 +70,8 @@
     \chapter{Algebraic Groups}
         \input{chapters/Algebraic_groups/First_properties/text.tex}
         \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
+        \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
+        \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
 
     % \appendix
 
