--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -53,8 +53,8 @@
         \input{chapters/Surfaces/Elliptic_surfaces/text.tex}
         \input{chapters/Surfaces/some_singular_surfaces/text.tex}
 
-    \chapter{Moduli of vector bundles on curves}
-        \input{chapters/Moduli_of_vector_bundle_on_curves/Introduction_to_moduli_problems/text.tex}
+    % \chapter{Moduli of vector bundles on curves}
+    %     \input{chapters/Moduli_of_vector_bundle_on_curves/Introduction_to_moduli_problems/text.tex}
 
     \chapter{Birational Geometry}
         % \input{chapters/Birational_geometry/bend_and_break/text.tex}
@@ -72,6 +72,8 @@
         \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
         \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
         \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
+
+    \chapter{Moduli Spaces}
 
     % \appendix
 
