--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -71,9 +71,11 @@
         \input{chapters/Algebraic_groups/First_properties/text.tex}
         \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
         \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
+        \input{chapters/Algebraic_groups/Structure_of_linear_algebraic_groups/text.tex}
         \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
 
     \chapter{Moduli Spaces}
+        \input{chapters/Moduli_spaces/Introduction_to_moduli_problems/text.tex}
 
     % \appendix
 
