--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -40,9 +40,11 @@
         \input{chapters/Schemes_and_varieties/category_of_sheaves_of_modules/text.tex}
         \input{chapters/Schemes_and_varieties/line_bundles_and_divisors/text.tex}
         \input{chapters/Schemes_and_varieties/Line_bundles_induce_morphisms/text.tex}
+        \input{chapters/Schemes_and_varieties/finite_morphisms_and_fibrations/text.tex}
+        \input{chapters/Schemes_and_varieties/differentials_and_duality/text.tex}
         \input{chapters/Schemes_and_varieties/flat_smooth_and_etale_morphisms/text.tex}
 
-    \chapter{More Scattered Topics}
+    % \chapter{More Scattered Topics}
 
     \chapter{Surfaces}
         \input{chapters/Surfaces/The_first_properties/text.tex}
@@ -53,29 +55,31 @@
         \input{chapters/Surfaces/Elliptic_surfaces/text.tex}
         \input{chapters/Surfaces/some_singular_surfaces/text.tex}
 
-    % \chapter{Moduli of vector bundles on curves}
-    %     \input{chapters/Moduli_of_vector_bundle_on_curves/Introduction_to_moduli_problems/text.tex}
+        
+    % \chapter{Birational Geometry}
+    %     % \input{chapters/Birational_geometry/bend_and_break/text.tex}
+    %     \input{chapters/Birational_geometry/Technical_preparation/text.tex}
+    %     \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
+    %     \input{chapters/Birational_geometry/Cone_theorem/text.tex}
+    %     % \input{chapters/Birational_geometry/F-singularties/text.tex}
 
-    \chapter{Birational Geometry}
-        % \input{chapters/Birational_geometry/bend_and_break/text.tex}
-        \input{chapters/Birational_geometry/Technical_preparation/text.tex}
-        \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
-        \input{chapters/Birational_geometry/Cone_theorem/text.tex}
-        % \input{chapters/Birational_geometry/F-singularties/text.tex}
+    % \chapter{Abelian Varieties}
+    %     \input{chapters/Abelian_varieties/definition_and_examples/text.tex}
+    %     \input{chapters/Abelian_varieties/Picard_groups_of_abelian_varieties/text.tex}
 
-    \chapter{Abelian Varieties}
-        \input{chapters/Abelian_varieties/definition_and_examples/text.tex}
-        \input{chapters/Abelian_varieties/Picard_groups_of_abelian_varieties/text.tex}
-
-    \chapter{Algebraic Groups}
-        \input{chapters/Algebraic_groups/First_properties/text.tex}
-        \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
-        \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
-        \input{chapters/Algebraic_groups/Structure_of_linear_algebraic_groups/text.tex}
-        \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
+    % \chapter{Algebraic Groups}
+    %     \input{chapters/Algebraic_groups/First_properties/text.tex}
+    %     \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
+    %     \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
+    %     \input{chapters/Algebraic_groups/Structure_of_linear_algebraic_groups/text.tex}
+    %     \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
 
     \chapter{Moduli Spaces}
         \input{chapters/Moduli_spaces/Introduction_to_moduli_problems/text.tex}
+
+    \chapter{Sites, algebraic space and stacks}
+        \input{chapters/Sites_algebraic_spaces_and_stacks/Sites/text.tex}
+        \input{chapters/Sites_algebraic_spaces_and_stacks/Stacks_in_category_theory/text.tex}
 
     % \appendix
 
