--- a/notebook_ag.tex
+++ b/notebook_ag.tex
@@ -56,30 +56,40 @@
         \input{chapters/Surfaces/some_singular_surfaces/text.tex}
 
         
-    % \chapter{Birational Geometry}
-    %     % \input{chapters/Birational_geometry/bend_and_break/text.tex}
-    %     \input{chapters/Birational_geometry/Technical_preparation/text.tex}
-    %     \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
-    %     \input{chapters/Birational_geometry/Cone_theorem/text.tex}
-    %     % \input{chapters/Birational_geometry/F-singularties/text.tex}
+    \chapter{Birational Geometry}
+        % \input{chapters/Birational_geometry/bend_and_break/text.tex}
+        \input{chapters/Birational_geometry/Technical_preparation/text.tex}
+        \input{chapters/Birational_geometry/Kodaira_vanishing/text.tex}
+        \input{chapters/Birational_geometry/Cone_theorem/text.tex}
+        % \input{chapters/Birational_geometry/F-singularties/text.tex}
 
-    % \chapter{Abelian Varieties}
-    %     \input{chapters/Abelian_varieties/definition_and_examples/text.tex}
-    %     \input{chapters/Abelian_varieties/Picard_groups_of_abelian_varieties/text.tex}
 
-    % \chapter{Algebraic Groups}
-    %     \input{chapters/Algebraic_groups/First_properties/text.tex}
-    %     \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
-    %     \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
-    %     \input{chapters/Algebraic_groups/Structure_of_linear_algebraic_groups/text.tex}
-    %     \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
+    \chapter{Abelian Varieties}
+        \input{chapters/Abelian_varieties/definition_and_examples/text.tex}
+        \input{chapters/Abelian_varieties/Picard_groups_of_abelian_varieties/text.tex}
+
+
+    \chapter{Algebraic Groups}
+        \input{chapters/Algebraic_groups/First_properties/text.tex}
+        \input{chapters/Algebraic_groups/Quotient_by_algebraic_group/text.tex}
+        \input{chapters/Algebraic_groups/Decomposition_of_algebraic_groups/text.tex}
+        \input{chapters/Algebraic_groups/Structure_of_linear_algebraic_groups/text.tex}
+        \input{chapters/Algebraic_groups/Birational_group_of_varieties_of_general_type/text.tex}
+
+
+    \chapter{Sites, algebraic space and stacks}
+        % \input{chapters/Sites_algebraic_spaces_and_stacks/Sites/text.tex}
+        % \input{chapters/Sites_algebraic_spaces_and_stacks/Stacks_in_category_theory/text.tex}
+        \input{chapters/Sites_algebraic_spaces_and_stacks/Preliminaries_in_category_theory/text.tex}
+        \input{chapters/Sites_algebraic_spaces_and_stacks/Algebraic_spaces/text.tex}
+        \input{chapters/Sites_algebraic_spaces_and_stacks/Algebraic_stacks/text.tex}
+
 
     \chapter{Moduli Spaces}
         \input{chapters/Moduli_spaces/Introduction_to_moduli_problems/text.tex}
+        \input{chapters/Moduli_spaces/The_Quot_functor/text.tex}
+        % \input{chapters/Moduli_spaces/The_picard_functor/text.tex}
 
-    \chapter{Sites, algebraic space and stacks}
-        \input{chapters/Sites_algebraic_spaces_and_stacks/Sites/text.tex}
-        \input{chapters/Sites_algebraic_spaces_and_stacks/Stacks_in_category_theory/text.tex}
 
     % \appendix
 
